add documentation for users/ singup, signin, and get users
